--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@ body {
     
 }
 
-h1 {
-    color: white;
-}
-
 .sidebar {
     position: fixed;
     top: 0;
@@ -23,7 +19,30 @@ h1 {
     padding: 16px 0 0 16px;
 }
 
-.logo img {
+.sidebar_navigation .logo {
+    background-color: #121212;
+    display: flex;
+    border-radius: 8px;
+    padding: 16px 0 0 16px;
+}
+
+.sidebar_navigation .logo img {
     width: 80px;
-    
+}
+
+.sidebar nav ul {
+    margin-top: 20px;
+    padding: 0 20px 10px 20px;
+}
+
+.sidebar ul li {
+    padding: 10px 0;
+}
+
+.sidebar nav ul li a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: "DM Sans", sans-serif;
 }
