--- a/style.css
+++ b/style.css
@@ -1,48 +1,132 @@
-body {
+body{
     background-color: #000;
-    
 }
 
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    padding: 12px;
-    width: 300px;
-
+.sidebar{
+    position:fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    padding:12px;
+    width:300px;
 }
 
-.sidebar_navigation {
+.sidebar__navigation{
     background-color: #121212;
-    border-radius: 8px;
-    padding: 16px 0 0 16px;
+    border-radius:8px;
+    padding:16px 0 0 16px;
 }
 
-.sidebar_navigation .logo {
-    background-color: #121212;
-    display: flex;
-    border-radius: 8px;
-    padding: 16px 0 0 16px;
+.logo{
+    background: #121212;
+    display:flex;
+    border-radius:8px ;
+    padding:8px 0 0 16px;
 }
 
-.sidebar_navigation .logo img {
-    width: 80px;
+.sidebar__navigation .logo img{
+    width:80px;
 }
 
-.sidebar nav ul {
+.sidebar nav ul{
     margin-top: 20px;
-    padding: 0 20px 10px 20px;
+    padding:0 20px 10px 20px;
 }
 
-.sidebar ul li {
+.sidebar ul li{
     padding: 10px 0;
 }
 
-.sidebar nav ul li a {
+.sidebar nav ul li a{
     color: #b3b3b3;
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
     font-family: "DM Sans", sans-serif;
+}
+
+
+.library {
+    position:fixed;
+    top:165px;
+    left:0;
+    bottom:0;
+    padding:12px;
+    width:300px;
+}
+
+.library_navigation {
+    background-color: #121212;
+    border-radius:8px;
+    padding:16px 0 0 16px;
+}
+
+.topic_library {
+    background: #121212;
+    display:flex;
+    border-radius:8px ;
+    padding:8px 0 0 16px;
+}
+
+.library_navigation .logo img{
+    width:80px;
+}
+
+.library nav a {
+    color: #b3b3b3;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    font-family: "DM Sans", sans-serif;
+    margin-bottom: 25px;
+}
+
+.playlist {
+    background-color: #313131;
+    border-radius: 8px;
+    font-family: "DM Sans", sans-serif;
+    margin-right: 10px;
+}
+
+.playlist h1 {
+    color: white;
+    font-weight: 700;
+    padding: 15px 0 4px 16px;
+    
+}
+
+.playlist p {
+    color: white;
+    font-weight: 500;
+    padding: 8px 0 10px 16px;
+    margin-bottom: 20px;
+}
+
+.playlist button {
+    font-family: "DM Sans", sans-serif;
+    font-weight: 600;
+    border-radius: 40px;
+    padding: 10px 15px;
+    margin: 0 0 20px 16px;
+}
+
+.cookies p {
+    font-family: "DM Sans", sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #b3b3b3;
+    padding: 30px 0 30px 20px;
+}
+
+.cookies button {
+    background-color: #16141c;
+    color: white;
+    border-radius: 40px;
+    border: solid 2px #b3b3b3;
+    padding: 5px 15px;
+    margin-bottom: 10px;
+}
+
+.idioma {
+    display: flex;
 }
