--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body{
     margin-bottom: 25px;
 }
 
+.biblio {
+    padding: 0 80px 0 10px;
+}
+
 .playlist {
     background-color: #313131;
     border-radius: 8px;
@@ -127,6 +131,6 @@ body{
     margin-bottom: 10px;
 }
 
-.idioma {
+.idioma_botao {
     display: flex;
 }
